--- a/app/src/main/res/layout/fragment_info.xml
+++ b/app/src/main/res/layout/fragment_info.xml
@@ -6,10 +6,13 @@
     android:layout_height="match_parent"
     tools:context=".info.InfoFragment">
 
-    <fragment
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/google_map"
-        android:name="com.google.android.gms.maps.SupportMapFragment"/>
+        android:textStyle="bold"
+        android:textSize="30dp"
+        android:gravity="center"
+        android:textColor="@color/black"
+        android:text="Volevamo implementare la mappa Google, ma le richieste API si pagano!!" />
 
 </RelativeLayout>
