--- a/app/src/main/res/layout/recensione_design.xml
+++ b/app/src/main/res/layout/recensione_design.xml
@@ -22,7 +22,7 @@
         android:isIndicator="true"
         android:progressBackgroundTint="#33FFFF00"
         android:progressTint="#FFFF00"
-        android:secondaryProgressTint="@color/black"
+        android:secondaryProgressTint="@color/black_overlay"
         android:layout_marginBottom="8dp"/>
 
     <TextView
